--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
     "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.12.0"
+    "babel-plugin-styled-components": "^1.12.0",
+    "typescript": "^4.3.2"
   }
 }
