--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "@types/react": "^17.0.11",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
-    "typescript": "^4.3.2"
+    "typescript": "4.2.2"
   }
 }
