--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "dependencies": {
     "framer-motion": "^4.1.17",
-    "next": "^10.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/react": "^6.2.9",
-    "@types/node": "^15.12.2",
-    "@types/react": "^17.0.11",
+    "@babel/core": "^7.14.6",
+    "@storybook/addon-actions": "^6.3.2",
+    "@storybook/addon-essentials": "^6.3.2",
+    "@storybook/addon-links": "^6.3.2",
+    "@storybook/react": "^6.3.2",
+    "@types/node": "^15.14.0",
+    "@types/react": "^17.0.13",
     "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.12.0",
-    "chromatic": "^5.9.1",
-    "typescript": "4.2.2"
+    "babel-plugin-styled-components": "^1.13.1",
+    "chromatic": "^5.9.2",
+    "typescript": "^4.3.5"
   }
 }
