--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.13.1",
     "chromatic": "^5.9.2",
+    "http-proxy-middleware": "^2.0.1",
     "typescript": "^4.3.5"
   }
 }
